# web_hw5

./: Makefile  functions.py  main.py  pyproject.toml  server.py
