[tool.poetry]
name = "web-hw5"
version = "0.1.0"
description = ""
authors = ["marinasemak <marina.semak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.5"
websockets = "^13.0.1"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
